fix hero height on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -4036,7 +4036,7 @@ html[xmlns] .flexslider .slides {
 
   /* line 37, ../sass/responsive/_mobile.scss */
   .hero.flexslider .slides li {
-    height: 100vh;
+    height: 93vh;
     background-position: center center;
     background-attachment: scroll;
   }
