--- a/sass/responsive/_mobile.scss
+++ b/sass/responsive/_mobile.scss
@@ -35,7 +35,7 @@
 	.hero.flexslider {
 
 		.slides li {
-			height: 100vh;
+			height: 93vh;
 	    background-position: center center;
 	    background-attachment: scroll;
 	  }
